<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semi_black"
    tools:context=".presentation.sign_in.SignInFragment">

    <TextView
        style="@style/TitleText"
        android:id="@+id/tvGreetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/welcome_back_hint"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical_left_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/ContentTextStyling"
        android:id="@+id/auth_login_to_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/login_to_continue_hint"
        app:layout_constraintEnd_toEndOf="@+id/tvGreetings"
        app:layout_constraintStart_toStartOf="@+id/tvGreetings"
        app:layout_constraintTop_toBottomOf="@+id/tvGreetings" />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        style="@style/AuthFormStyle"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="@drawable/background_rounded_gray_secondary"
        android:ems="10"
        android:hint="@string/auth_email"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/auth_form_height"
        android:padding="12dp"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical_left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/auth_login_to_continue" />

    <EditText
        style="@style/AuthFormStyle"
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/background_rounded_gray_secondary"
        android:ems="10"
        android:hint="@string/auth_password"
        android:inputType="textPassword"
        android:minHeight="@dimen/auth_form_height"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <TextView
        android:id="@+id/btnForgotPassword"
        style="@style/HelperText2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/forgot_password_height"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/btnLogin"
        style="@style/Headline.h2"
        android:layout_width="0dp"
        android:layout_height="@dimen/auth_form_height"
        android:layout_marginTop="64dp"
        android:background="@drawable/background_rounded_gray_secondary"
        android:backgroundTint="@color/light_red"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/auth_login"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/btnNewAccount"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vertical_left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/btnForgotPassword"
        app:layout_constraintVertical_bias="0.491" />

    <TextView
        style="@style/HelperText"
        android:id="@+id/btnNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/auth_form_height"
        android:clickable="true"
        android:layout_marginBottom="@dimen/auth_helper_bottom_margin"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/auth_create_new_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical_left_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/vertical_guideline_spacing" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/vertical_guideline_spacing" />

    <ProgressBar
        android:indeterminateTint="@color/light_red"
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/btnNewAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>